--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
             </div>
         </div>
     </div>
+    <div class="qoute-wrapper">
+        <p class="qoute">
+            This is an inspiring qoute, or a testimonial from a customer.
+            Maybe it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks nice
+        </p>
+        <span class="author">-Thor, God of Thunder</span>
+    </div>
 </body>
 
 </html>
