--- a/index.html
+++ b/index.html
@@ -67,6 +67,20 @@
         </p>
         <span class="author">-Thor, God of Thunder</span>
     </div>
+    <div class="signup-section">
+        <div class="ssleft">
+            <p class="call-to-action">Call to Action! It's Time!</p>
+            <p class="subtext-action">Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <div class="ssright">
+            <button class="signup-button">
+                Sign Up
+            </button>
+        </div>
+    </div>
+    <div class="footer">
+        
+    </div>
 </body>
 
 </html>
